--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:id="@+id/activity_start"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,8 +12,29 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="mprog.simon.simonilic_pset2.StartActivity">
 
-    <TextView
+
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+        app:srcCompat="@drawable/madlibs"
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/mad_libs_logo"
+        android:contentDescription="mad libs logo" />
+
+    <Button
+        android:text="Begin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/button"
+        android:textSize="14sp"
+        android:onClick="forward"
+        style="@style/Widget.AppCompat.Button" />
+
+    <TextView
+        android:text="@string/welcome_string"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/welcome_message"
+        android:textAlignment="center" />
+
+</LinearLayout>
