--- a/app/src/main/res/layout/activity_get_input.xml
+++ b/app/src/main/res/layout/activity_get_input.xml
@@ -12,7 +12,7 @@
     tools:context="mprog.simon.simonilic_pset2.GetInputActivity">
 
     <TextView
-        android:text="Fill in the requested words below to complete the Story!"
+        android:text="@string/instructions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView2"
@@ -41,7 +41,7 @@
             android:layout_weight="1" />
 
         <Button
-            android:text="OK"
+            android:text="@string/ok_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/button2"
