--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -19,7 +19,7 @@
         app:srcCompat="@drawable/madlibs"
         android:layout_gravity="center_horizontal"
         android:id="@+id/mad_libs_logo"
-        android:contentDescription="mad libs logo" />
+        android:contentDescription="@string/image_description" />
 
     <Button
         android:text="@string/begin_button_text"
@@ -28,6 +28,7 @@
         android:id="@+id/button"
         android:textSize="14sp"
         android:onClick="forward"
+        android:background="@color/colorPrimary"
         style="@style/Widget.AppCompat.Button" />
 
     <TextView
